button gap fixed

--- a/css/index.css
+++ b/css/index.css
@@ -134,15 +134,13 @@ font-family:arial;
   background-color: goldenrod;
   border: none;
   color: white;
-  padding: 16px 72px;
+  padding: 1px 1px;
   text-align: center;
-  font-size: 16px;
-  margin-top: -6%;
-  margin-left: 43.5%;
-  transition: 0.3s;
-  display: inline-block;
-  text-decoration: none;
-  cursor: pointer;
+  font-size: px;
+  margin-top: 0;
+  margin-left: 0;
+ 
+  
   position: absolute;
   visibility: hidden;
 }
